<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.ejemplo.kevroman.calculadoranueva.DividirActivity">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numero1"
        android:hint="@string/ingresar_numeroD"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/numero2"
        android:hint="@string/ingresar_numero2"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boton"
        android:hint="@string/calcular"/>
    <android.support.v7.app.AlertController.RecycleListView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recycler"></android.support.v7.app.AlertController.RecycleListView>
</LinearLayout>
